(lang dune 2.9)

(name test)

(generate_opam_files true)

(source
 (github  Jan-Kluger/GRNVS-OCaml))

(authors "Yannick Schürmann")

(license MIT)

(documentation -)

(package
 (name test)
 (synopsis "GRNVS package")
 (description "A GRNVS OCaml Package")
 (depends ocaml dune)
 (tags
  (topics stuff)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
